# chem_deg

./: .gitignore  README.md  myproject.toml  pyproject.toml
contrib/: visualise_estate_indices.py  visualise_partial_charges.py
dev/: compile_requirements.sh
requirements/: requirements-dev.txt  requirements.txt
src/chem_deg/: degradation.py  halflife.py  main.py  util.py
src/chem_deg/kinetics/: graph.py  integration.py
src/chem_deg/reactions/: __init__.py  base.py  hydrolysis.py
src/chem_deg/reactions/hydrolysis/: anhydride.py  carbamate.py  carbonate.py  ester.py  halogenated_aliphatic.py  imide.py  lactam.py  lactone.py  misc.py  readme.md  urea.py
tests/: test_degradation.py  test_hydrolysis.py
tests/kinetics/: test_halflife.py  test_integration.py
tests/reactions/: test_reaction_classes.py
