[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chem-deg"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A short description of your project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "rdkit>=2024.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
select = ["E", "F"]

[tool.ruff]
# Set maximum line length
line-length = 100  # Change this number to your preferred length

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
